--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,20 +1,10 @@
 parser: babel-eslint
 env:
   browser: true
-  es6: true
 extends:
-  - 'plugin:react/recommended'
   - airbnb
 globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parserOptions:
-  ecmaFeatures:
-    jsx: true
-  ecmaVersion: 2018
-  sourceType: module
-plugins:
-  - react
+  ProctorClient3: readonly
 rules:
   comma-dangle: [2, never]
   max-len:
