--- a/package.json
+++ b/package.json
@@ -63,12 +63,11 @@
     "jsdom-global": "~2.1.1",
     "mocha": "^3.5.0",
     "nyc": "~13.1.0",
+    "minimist": ">=1.2.2",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "4.4.0",
-    "react-router-dom": "4.4.0",
     "rewire": "^2.5.2",
     "should": "^12.0.0",
     "sinon": "^3.2.1",
