--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "contributors": [
     "@manquer"
   ],
+  "types": "./types/index.d.ts",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/talview/react-proview/issues"
