--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jsdom": "~9.12.0",
     "jsdom-global": "~2.1.1",
+    "minimist": ">=1.2.2",
     "mocha": "^3.5.0",
     "nyc": "~13.1.0",
-    "minimist": ">=1.2.2",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.0.1",
@@ -72,6 +72,8 @@
     "rewire": "^2.5.2",
     "should": "^12.0.0",
     "sinon": "^3.2.1",
+    "style-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "1.4.1",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
