--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-proview",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "React ",
   "main": "dist/react-proview.js",
   "scripts": {
@@ -36,6 +36,11 @@
   "peerDependencies": {
     "prop-types": "^15.6.0",
     "react": "^15.6.2 || ^16.0"
+  },
+  "release-it": {
+    "hooks": {
+      "after:bump": "npx auto-changelog -p"
+    }
   },
   "devDependencies": {
     "@babel/cli": "7.6.2",
